Fixed mobile nav not showing

--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -24,7 +24,7 @@
 .navbar{
     position: fixed; 
     color: white !important; 
-    height: 75px; 
+    min-height: 75px; 
     width: 100%;  
     padding: 0px 30px 0px 75px;
     background-color: #2b2d42 !important;
